# Research-OrchestrateBench

./: .gitignore  BLOG.md  CITATION.cff  DEMO.md  DESIGN_DOC.md  ONE_PAGER.md  PAPER.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/measured/: README.md  exp2_ablation_real.csv  exp2_domain_real.csv  exp2_policy_real.csv  exp2_real.csv  exp3_policy_real.csv  exp3_real.csv  exp4_real.csv
examples/: exp2_measured_template.csv  exp3_measured_template.jsonl
paper/: README.md  main.tex  references.bib
scripts/: analyze_measured.py  audit_paper_claims.py  export_paper_tables.py  make_figures.py  reproduce_exp1.py  run_demo.py  run_exp2.py  run_exp23_pipeline.py  run_exp3.py  scaffold_measured_inputs.py  validate_measured_input.py
src/orchestratebench/: __init__.py  automation.py  console_reports.py  core.py  data.py  evaluate.py  experiment_analysis.py  experiment_artifacts.py  experiments.py  failures.py  measured_runs.py  measured_templates.py  paper_reports.py  publication.py  real_run.py  routing_comparison.py  statistics.py
src/orchestratebench/cli/: __init__.py  _common.py  analyze_measured.py  export_paper_tables.py  reproduce_exp1.py  run_demo.py  run_exp2.py  run_exp23_pipeline.py  run_exp3.py  scaffold_measured_inputs.py  validate_measured_input.py
tests/: conftest.py  test_automation.py  test_cli.py  test_core.py  test_data.py  test_evaluate.py  test_experiments.py  test_failures.py  test_measured_runs.py  test_measured_templates.py  test_paper_reports.py  test_routing_comparison.py  test_statistics.py
