[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestratebench"
version = "0.1.0"
description = "Benchmark for LLM orchestration and routing policies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Yidian Chen"},
    {name = "Yingzi Gu"},
]
keywords = [
    "llm",
    "multi-agent",
    "benchmark",
    "routing",
    "reproducibility",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=9.0",
    "ruff>=0.12",
]

[project.scripts]
orbench-analyze-measured = "orchestratebench.cli.analyze_measured:main"
orbench-demo = "orchestratebench.cli.run_demo:main"
orbench-export-paper = "orchestratebench.cli.export_paper_tables:main"
orbench-real-run = "orchestratebench.real_run:main"
orbench-reproduce-exp1 = "orchestratebench.cli.reproduce_exp1:main"
orbench-run-exp2 = "orchestratebench.cli.run_exp2:main"
orbench-run-exp23-pipeline = "orchestratebench.cli.run_exp23_pipeline:main"
orbench-run-exp3 = "orchestratebench.cli.run_exp3:main"
orbench-scaffold-measured = "orchestratebench.cli.scaffold_measured_inputs:main"
orbench-validate-measured = "orchestratebench.cli.validate_measured_input:main"

[project.urls]
Repository = "https://github.com/anote-ai/Research-OrchestrateBench"
"Design Doc" = "https://github.com/anote-ai/Research-OrchestrateBench/blob/main/DESIGN_DOC.md"
"Reproducibility Guide" = "https://github.com/anote-ai/Research-OrchestrateBench/blob/main/REPRODUCIBILITY.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["orchestratebench"]
